--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,41 @@
  */
 
 
-.header-text {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+.header-text p{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 40px;
+}
+
+.user_profile {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row
+}
+
+.username {
+  padding: 5px;
+  margin-right: 5px;
+  text-align: left
+}
+
+.user_profile a {
+  background-color: yellowgreen;
+  border-radius: 3mm;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  text-decoration: none
+}
+
+.error_msgs {
+  color: red;
+  font-size: 30px
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+
 }
 
