--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,16 @@
 
     <header>
       <div class="header_text">
-        Music App
+        <p>Music App<p>
       </div>
-      <div class="user_opt">
+      <div class="user_profile">
+
+
         <% if logged_in? %>
-          <%= current_user.user_name %>
+          <div class="username">
+            <%= current_user.user_name %>
+          </div>
+          
           <form action="<%= session_url %>" method="POST">
             <%= auth_token %>
             <input type="hidden" name="_method" value="DELETE" >
@@ -30,13 +35,20 @@
       </div>
     </header>
 
+    <% if flash[:errors] %>
+    <ul>
+      <% flash[:errors].each do |error| %>
+      <li class="error_msgs"><%= error %></li>
+    </ul>
+      <% end %>
+    <% end %>
 
     <%= yield %>
     <footer>
+      <%= yield :footer%>
       <div class="footer_text">
         <p>Copy right by App Academy, the coolest bootcamp ever</p>
       </div>
-      <%= yield :footer%>
     </footer>
   </body>
 </html>
